// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9989",
  "arbBalanceDelta1": "-0.0098756",
  "backrun": Object {
    "delta0": "-9.9989",
    "delta1": "0.0098756",
    "executionPrice": "0.00098767",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "9.7890",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099820",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9999",
  "arbBalanceDelta1": "-0.0099056",
  "backrun": Object {
    "delta0": "-0.30578",
    "delta1": "0.0095690",
    "executionPrice": "0.031294",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "0.30593",
    "delta1": "-0.0096834",
    "executionPrice": "0.031653",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29012",
    "afterSandwich": "9.4999",
    "final": "9.7900",
  },
  "sandwichedPrice": "0.0010020",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9990",
  "arbBalanceDelta1": "-0.010026",
  "backrun": Object {
    "delta0": "-9.9990",
    "delta1": "0.010026",
    "executionPrice": "0.0010027",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "10.089",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099820",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.000",
  "arbBalanceDelta1": "-0.010056",
  "backrun": Object {
    "delta0": "-0.30593",
    "delta1": "0.0097192",
    "executionPrice": "0.031769",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "0.30593",
    "delta1": "-0.0096834",
    "executionPrice": "0.031653",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29930",
    "afterSandwich": "9.7907",
    "final": "10.090",
  },
  "sandwichedPrice": "0.0010020",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9873",
  "arbBalanceDelta1": "-0.89764",
  "backrun": Object {
    "delta0": "-9.9873",
    "delta1": "0.89764",
    "executionPrice": "0.089877",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "8.8899",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90908",
  "executionPrice": "0.090908",
  "priceAfter": "0.0082660",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9881",
  "arbBalanceDelta1": "-0.90119",
  "backrun": Object {
    "delta0": "-2.2983",
    "delta1": "0.68641",
    "executionPrice": "0.29866",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "2.3102",
    "delta1": "-0.69788",
    "executionPrice": "0.30209",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.5661",
    "afterSandwich": "7.3212",
    "final": "8.8871",
  },
  "sandwichedPrice": "0.091266",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.002",
  "arbBalanceDelta1": "-0.91265",
  "backrun": Object {
    "delta0": "-10.002",
    "delta1": "0.91265",
    "executionPrice": "0.091243",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "9.1898",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90908",
  "executionPrice": "0.090908",
  "priceAfter": "0.0082660",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.003",
  "arbBalanceDelta1": "-0.91621",
  "backrun": Object {
    "delta0": "-2.3134",
    "delta1": "0.70143",
    "executionPrice": "0.30320",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "2.3102",
    "delta1": "-0.69788",
    "executionPrice": "0.30209",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6354",
    "afterSandwich": "7.5519",
    "final": "9.1871",
  },
  "sandwichedPrice": "0.091266",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8823",
  "arbBalanceDelta1": "-4.8849",
  "backrun": Object {
    "delta0": "-9.8823",
    "delta1": "4.8849",
    "executionPrice": "0.49431",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "4.7998",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9997",
  "executionPrice": "0.49997",
  "priceAfter": "0.25003",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.8829",
  "arbBalanceDelta1": "-4.9003",
  "backrun": Object {
    "delta0": "-4.0029",
    "delta1": "2.8026",
    "executionPrice": "0.70013",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "2.4408e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.1201",
    "delta1": "-2.9177",
    "executionPrice": "0.70816",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4408e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.1200",
    "afterSandwich": "3.6646",
    "final": "4.7849",
  },
  "sandwichedPrice": "0.50154",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.034",
  "arbBalanceDelta1": "-5.0350",
  "backrun": Object {
    "delta0": "-10.034",
    "delta1": "5.0350",
    "executionPrice": "0.50181",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "5.0990",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9997",
  "executionPrice": "0.49997",
  "priceAfter": "0.25003",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.034",
  "arbBalanceDelta1": "-5.0505",
  "backrun": Object {
    "delta0": "-4.1543",
    "delta1": "2.9528",
    "executionPrice": "0.71077",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "2.4408e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.1201",
    "delta1": "-2.9177",
    "executionPrice": "0.70816",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4408e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.2436",
    "afterSandwich": "3.8410",
    "final": "5.0841",
  },
  "sandwichedPrice": "0.50154",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.8319",
  "arbBalanceDelta1": "-7.9372",
  "backrun": Object {
    "delta0": "-8.8319",
    "delta1": "7.9372",
    "executionPrice": "0.89870",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "0.71802",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0901",
  "executionPrice": "0.90901",
  "priceAfter": "0.82646",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.8324",
  "arbBalanceDelta1": "-7.9851",
  "backrun": Object {
    "delta0": "-3.4354",
    "delta1": "3.2467",
    "executionPrice": "0.94507",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "3.2947e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.6030",
    "delta1": "-4.4000",
    "executionPrice": "0.95590",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2947e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.11091",
    "afterSandwich": "0.55065",
    "final": "0.67066",
  },
  "sandwichedPrice": "0.91384",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.346",
  "arbBalanceDelta1": "-9.4389",
  "backrun": Object {
    "delta0": "-10.346",
    "delta1": "9.4389",
    "executionPrice": "0.91235",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "1.0102",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0901",
  "executionPrice": "0.90901",
  "priceAfter": "0.82646",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.346",
  "arbBalanceDelta1": "-9.4868",
  "backrun": Object {
    "delta0": "-4.9492",
    "delta1": "4.7484",
    "executionPrice": "0.95942",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "3.2947e+13",
  },
  "collect": Object {
    "amount0": "0.0010000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.6030",
    "delta1": "-4.4000",
    "executionPrice": "0.95590",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2947e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.24900",
    "afterSandwich": "0.71256",
    "final": "0.96288",
  },
  "sandwichedPrice": "0.91384",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9989",
  "arbBalanceDelta1": "-0.0098756",
  "backrun": Object {
    "delta0": "-9.9989",
    "delta1": "0.0098756",
    "executionPrice": "0.00098767",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "9.7890",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099820",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9997",
  "arbBalanceDelta1": "-0.0099056",
  "backrun": Object {
    "delta0": "-0.30578",
    "delta1": "0.0095690",
    "executionPrice": "0.031294",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "0.30593",
    "delta1": "-0.0096834",
    "executionPrice": "0.031653",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29012",
    "afterSandwich": "9.4997",
    "final": "9.7898",
  },
  "sandwichedPrice": "0.0010020",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9990",
  "arbBalanceDelta1": "-0.010026",
  "backrun": Object {
    "delta0": "-9.9990",
    "delta1": "0.010026",
    "executionPrice": "0.0010027",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "10.089",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099820",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9998",
  "arbBalanceDelta1": "-0.010056",
  "backrun": Object {
    "delta0": "-0.30593",
    "delta1": "0.0097192",
    "executionPrice": "0.031769",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0910e+12",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "0.30593",
    "delta1": "-0.0096834",
    "executionPrice": "0.031653",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0910e+12",
  },
  "profit": Object {
    "afterFrontrun": "-0.29930",
    "afterSandwich": "9.7905",
    "final": "10.090",
  },
  "sandwichedPrice": "0.0010020",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9873",
  "arbBalanceDelta1": "-0.89764",
  "backrun": Object {
    "delta0": "-9.9873",
    "delta1": "0.89764",
    "executionPrice": "0.089877",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "8.8899",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90908",
  "executionPrice": "0.090908",
  "priceAfter": "0.0082660",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9879",
  "arbBalanceDelta1": "-0.90119",
  "backrun": Object {
    "delta0": "-2.2983",
    "delta1": "0.68641",
    "executionPrice": "0.29866",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "2.3102",
    "delta1": "-0.69788",
    "executionPrice": "0.30209",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.5661",
    "afterSandwich": "7.3211",
    "final": "8.8870",
  },
  "sandwichedPrice": "0.091266",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.002",
  "arbBalanceDelta1": "-0.91265",
  "backrun": Object {
    "delta0": "-10.002",
    "delta1": "0.91265",
    "executionPrice": "0.091243",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "9.1898",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90908",
  "executionPrice": "0.090908",
  "priceAfter": "0.0082660",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.003",
  "arbBalanceDelta1": "-0.91621",
  "backrun": Object {
    "delta0": "-2.3134",
    "delta1": "0.70143",
    "executionPrice": "0.30320",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "1.0412e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "2.3102",
    "delta1": "-0.69788",
    "executionPrice": "0.30209",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "1.0412e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.6354",
    "afterSandwich": "7.5517",
    "final": "9.1869",
  },
  "sandwichedPrice": "0.091266",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8823",
  "arbBalanceDelta1": "-4.8849",
  "backrun": Object {
    "delta0": "-9.8823",
    "delta1": "4.8849",
    "executionPrice": "0.49431",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "4.7998",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9997",
  "executionPrice": "0.49997",
  "priceAfter": "0.25003",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.8827",
  "arbBalanceDelta1": "-4.9003",
  "backrun": Object {
    "delta0": "-4.0029",
    "delta1": "2.8026",
    "executionPrice": "0.70013",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "2.4408e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.1201",
    "delta1": "-2.9177",
    "executionPrice": "0.70816",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4408e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.1200",
    "afterSandwich": "3.6644",
    "final": "4.7847",
  },
  "sandwichedPrice": "0.50154",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.034",
  "arbBalanceDelta1": "-5.0350",
  "backrun": Object {
    "delta0": "-10.034",
    "delta1": "5.0350",
    "executionPrice": "0.50181",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "5.0990",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-4.9997",
  "executionPrice": "0.49997",
  "priceAfter": "0.25003",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.034",
  "arbBalanceDelta1": "-5.0505",
  "backrun": Object {
    "delta0": "-4.1543",
    "delta1": "2.9528",
    "executionPrice": "0.71077",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "2.4408e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.1201",
    "delta1": "-2.9177",
    "executionPrice": "0.70816",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.4408e+13",
  },
  "profit": Object {
    "afterFrontrun": "-1.2436",
    "afterSandwich": "3.8408",
    "final": "5.0839",
  },
  "sandwichedPrice": "0.50154",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.8319",
  "arbBalanceDelta1": "-7.9372",
  "backrun": Object {
    "delta0": "-8.8319",
    "delta1": "7.9372",
    "executionPrice": "0.89870",
  },
  "finalPrice": "0.97706",
  "profit": Object {
    "final": "0.71802",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0901",
  "executionPrice": "0.90901",
  "priceAfter": "0.82646",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.8323",
  "arbBalanceDelta1": "-7.9851",
  "backrun": Object {
    "delta0": "-3.4354",
    "delta1": "3.2467",
    "executionPrice": "0.94507",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "3.2947e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "0.97706",
  "frontrun": Object {
    "delta0": "4.6030",
    "delta1": "-4.4000",
    "executionPrice": "0.95590",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2947e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.11091",
    "afterSandwich": "0.55048",
    "final": "0.67050",
  },
  "sandwichedPrice": "0.91384",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.346",
  "arbBalanceDelta1": "-9.4389",
  "backrun": Object {
    "delta0": "-10.346",
    "delta1": "9.4389",
    "executionPrice": "0.91235",
  },
  "finalPrice": "1.0070",
  "profit": Object {
    "final": "1.0102",
  },
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0901",
  "executionPrice": "0.90901",
  "priceAfter": "0.82646",
}
`;

exports[`AlgebraPool arbitrage tests community fee = 170; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.346",
  "arbBalanceDelta1": "-9.4868",
  "backrun": Object {
    "delta0": "-4.9492",
    "delta1": "4.7484",
    "executionPrice": "0.95942",
  },
  "burn": Object {
    "amount0": "9.9990",
    "amount1": "3.2947e+13",
  },
  "collect": Object {
    "amount0": "0.00083000",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0070",
  "frontrun": Object {
    "delta0": "4.6030",
    "delta1": "-4.4000",
    "executionPrice": "0.95590",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.2947e+13",
  },
  "profit": Object {
    "afterFrontrun": "-0.24900",
    "afterSandwich": "0.71238",
    "final": "0.96271",
  },
  "sandwichedPrice": "0.91384",
}
`;
